// Twirp example RPC
// https://github.com/twitchtv/twirp-example/blob/c1501aeb89609a522db7d79d4c2e71b6c032af28/rpc/haberdasher/haberdasher.proto

syntax = "proto3";

package spec.haberdasher;
option go_package = "haberdasher";

// A Hat is a piece of headwear made by a Haberdasher.
message Hat {
    // The size of a hat should always be in inches.
    int32 size = 1;

    // The color of a hat will never be 'invisible', but other than
    // that, anything is fair game.
    string color = 2;

    // The name of a hat is it's type. Like, 'bowler', or something.
    string name = 3;
}

// Size is passed when requesting a new hat to be made. It's always measured in
// inches.
message Size {
    int32 inches = 1;
}

// A Haberdasher makes hats for clients.
service Haberdasher {
    // MakeHat produces a hat of mysterious, randomly-selected color!
    rpc MakeHat (Size) returns (Hat);
}
